--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
                     </p>
                     
-			<a href="D:/rr.pdf" download="Rijens_CV">Download CV</a>
+			<a href="assets/resume/rr.pdf" download="Rijens_CV">Download CV</a>
                 </div>
             </div><!-- end of about wrapper -->
         </div><!-- end of container -->
