--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ ________________________________________________________________________________
 ____________________________________________________________________________________________________________________________________________________________________________________________
 
     <section>
-        <h22. >Home Network Setup (Personal Project)</h2>
+        <h2>2. Home Network Setup (Personal Project)</h2>
         <p>Designed and configured a home network with Cisco routers and switches, implementing:</p>
         <ul>
             <li>VLANs for improved network segmentation</li>
@@ -266,12 +266,12 @@ ________________________________________________________________________________
                     href="https://themewagon.com">ThemeWagon</a>
             </p>
             <div class="social-links text-right m-auto ml-sm-auto">
-                <a href="javascript:void(0)" class="link"><i class="ti-facebook"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-twitter-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-google"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-pinterest-alt"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-instagram"></i></a>
-                <a href="javascript:void(0)" class="link"><i class="ti-rss"></i></a>
+                <a href="javascript:void(0)" class="https://www.instagram.com/therijensnadoda101/"><i class="ti-facebook"></i></a>
+                <a href="javascript:void(0)" class="https://www.instagram.com/therijensnadoda101/"><i class="ti-twitter-alt"></i></a>
+                <a href="javascript:void(0)" class="https://www.instagram.com/therijensnadoda101/"><i class="ti-google"></i></a>
+                <a href="javascript:void(0)" class="https://www.instagram.com/therijensnadoda101/"><i class="ti-pinterest-alt"></i></a>
+                <a href="javascript:void(0)" class="https://www.instagram.com/therijensnadoda101/"><i class="ti-instagram"></i></a>
+                <a href="javascript:void(0)" class="https://www.instagram.com/therijensnadoda101/"><i class="ti-rss"></i></a>
             </div>
         </footer>
     </div> <!-- end of page footer -->
