--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@ ________________________________________________________________________________
         </ul>
     </section>
 
+____________________________________________________________________________________________________________________________________________________________________________________________
     <section>
         <h2>3. Company Network Setup with Linux</h2>
         <p>Implemented various services in a company network using Linux:</p>
@@ -210,7 +211,7 @@ ________________________________________________________________________________
 
 
     <section>
-        <h2>Company Network Setup with Windows</h2>
+        <h2>4. Company Network Setup with Windows</h2>
         <p>Implemented various services in a company network using Windows:</p>
         <ul>
             <li>DNS server</li>
